# media-server

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  README.ru.md  docker-compose.dev.yml  docker-compose.yml  install.sh  migrate-jackett.sh  migrate-media.sh  pyproject.toml  setup.sh  teardown.sh  update-dev.sh  update.sh
.github/workflows/: build-dev.yml  build-edge.yml  build-push.yml  build-release.yml  deploy.yml  dev-deploy.yml
bot/: Dockerfile  api.py  bot.py  config.py  en.py  handlers.py  keyboards.py  main.py  parser.py  rename.py  ru.py  store.py  updater.sh
bot/handlers/: __init__.py  _utils.py  callbacks.py  commands.py  jobs.py  messages.py
bot/parser/: __init__.py  constants.py  filenames.py  fsops.py  linker.py  naming.py  test_filenames.py
bot/webapp/: __init__.py  auth.py  routes.py  server.py
docs/: commands.md  configuration.md  dev-setup.md  installation.md  releases.md  self-update.md  troubleshooting.md
lang/: en.py  en.sh  ru.py  ru.sh
upscaler/: Dockerfile  db.py  main.py  runners.py
webapp/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
webapp/src/: App.module.scss  App.tsx  api.ts  format.ts  i18n.ts  icons.tsx  main.tsx  mantineTheme.ts  styles.css  telegram.ts  theme.tsx  types.ts
webapp/src/components/: AppInput.module.scss  AppInput.tsx  AppSection.tsx  CategoryPicker.tsx  Collapse.module.scss  Collapse.tsx  PageHeader.module.scss  PageHeader.tsx  PromptSheet.module.scss  PromptSheet.tsx  Section.module.scss  Section.tsx  (+4 more)
(+35 files in other folders)
